- Fix the styling gaps

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,10 +36,14 @@
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
   left: 0;
+}
+
+.recipe_details {
+  overflow-y: scroll;
 }
 
 @import "recipe.css";
